added reset css and other adjustments

--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H1 lied</title>
     <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="reset.css"/>
 </head>
 <body>
     <h1>Jeremy is the coolest</h1>
     <h2>Bryson is also cool he is just less so</h2>
+    <br></br>
+
+    <box id="box1"></box>
+    <br></br>
+
     <script src='./main.js'></script>
+    <br></br>
+
 </body>
 </html>
 
