Made a few updates

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,13 @@
     <h2>Bryson is also cool he is just less so</h2>
     <br></br>
 
+    <div>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> 
+            <label for="button">Click here -></label>
+            <button name="button" id="button1">Try Me!</button>
+        </a>
+    </div>
+        
     <box id="box1"></box>
     <br></br>
 
